--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <a href="#" class="a"><i class="fab fa-whatsapp"></i></a>
 </div>     </div><br><br>
 </div><br><br><br>
-</div><hr style=" width: 600px;margin:auto">
+</div><hr style=" width: 580px;margin-left: 28%;">
 
 
 
@@ -58,7 +58,7 @@
  <div class="li"><i class="fas fa-seedling"></i><a href="https://www.facebook.com/groups/Jce.Group" >Computer Eng</a>
  </div>
  
-</div><br><br><br><hr style=" width: 600px;margin:auto"><br><br><br>
+</div><br><br><br><hr style=" width: 600px; margin-left: 28%;"><br><br><br>
 
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -140,7 +140,7 @@
       </div>
     </div>
   </div>
-</div><br><hr style=" width: 600px;margin:auto"><br><br><br>
+</div><br><hr style=" width: 600px; margin-left: 28%;"><br><br><br>
 
 
 
@@ -171,8 +171,7 @@
       
       <div class="col-md-4">
         <h2>عن القسم</h2>
-        <p>  يدرس تخصص هندسة الطيران في جامعة العلوم والتكنولوجيا الأردنية بواقع الـ١٦٠ ساعه دراسية بعدد كبير من مواد الهندسة الميكاني
-        يه كما يندرج في نقابة المهندسين الاردنيين تحت شعبة الهندسة الميكانيك، وتم إنشاء القسم برؤية لخدمة قطاع الطيران الأردني وسلاح الجو والمنطقه المحيطه
+        <p>  
         <a href="https://www.facebook.com/groups/1293094137513841/permalink/1723405757816008/?comment_id=1907340932755822"><i class="fab fa-accusoft"></i></a></p>
        
       </div><br>
