--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <a href="#" class="a"><i class="fab fa-whatsapp"></i></a>
 </div>     </div><br><br>
 </div><br><br><br>
-</div><hr style=" width: 580px;margin-left: 28%;">
+</div><hr >
 
 
 
@@ -57,8 +57,8 @@
  <div class="li"><i class="fas fa-seedling"></i> <a href="https://www.facebook.com/groups/softwarian"  class="aaa">Software Engineering </a></div>
  <div class="li"><i class="fas fa-seedling"></i><a href="https://www.facebook.com/groups/Jce.Group" >Computer Eng</a>
  </div>
- 
-</div><br><br><br><hr style=" width: 600px; margin-left: 28%;"><br><br><br>
+ <hr style=" width: 600px; "><br><br><br>
+</div><br><br><br>
 
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -140,7 +140,8 @@
       </div>
     </div>
   </div>
-</div><br><hr style=" width: 600px; margin-left: 28%;"><br><br><br>
+  <hr style=" width: 600px; "><br><br><br>
+</div><br>
 
 
 
