--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <a href="#" class="a"><i class="fab fa-whatsapp"></i></a>
 </div>     </div><br><br>
 </div><br><br><br>
-</div><hr >
+</div>
 
 
 
@@ -186,7 +186,7 @@
       </div>
     </div>
 
-    <hr>
+  
 
   </div>
   
