--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="social">
        <a href="https://www.facebook.com/isam.alhariri" class="a"><i class="fab fa-facebook"></i></a>
        <a href="https://www.instagram.com/isam_alhariri/?fbclid=IwAR0xPrblNhLOtej6pq5ur4GBsqpUfS67gP45z8qxjyweM5KJaVCd72D6ELY" class="a"><i class="fab fa-instagram"></i></a>
-       <a href="https://angry-mirzakhani-8f91e5.netlify.app/" class="a"><i class="fas fa-chalkboard-teacher"></i></a>
+       <a href="https://festive-bhabha-472d80.netlify.app/" class="a"><i class="fas fa-chalkboard-teacher"></i></a>
        <a href="#" class="a"><i class="fab fa-whatsapp"></i></a>
 </div>     </div><br><br>
 </div><br><br><br>
