--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <hr class="featurette-divider">
 
-    <div class="row featurette" style=" background-color: #555;color:white">
+    <div class="row featurette" style=" background-color: #555;color:white;">
       <div class="col-md-7">
         <h2 class="featurette-heading">The most important links  <span class="text-muted">for students.</span></h2>
         <p class="lead"><span class="span"><a class="links" style=" color:white" href="https://www.just.edu.jo/ar/Pages/JUST_Maps.aspx">JUST MAP</a></span>
@@ -204,8 +204,8 @@
                         <span class="span"><a class="links" style=" background-color: #555;color:white" href="https://www.just.edu.jo/ar/Deanships/DeanshipofStudentsAffairs/Departments/HousingServices/Pages/default.aspx">Female student housing</a></span>
                         <span class="span"><a class="links" style=" background-color: #555;color:white" href="https://www.just.edu.jo/ar/FacultiesandDepartments/FacultyofGraduateStudies/Pages/Default.aspx">Graduate Studies</a></span></p>
       </div>
-      <div class="col-md-5">
-       <img src="example-1.png" class="ss">
+      <div class="col-md-5" >
+       <img src="example-1.png" class="ss" style="width:350px;height:100%;">
       </div>
       <div class="isam"><p>Developed By ISAM AL-Hhariri &copy JUST UNIVERSITY </p></div>
     </div>
