--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   
   <div class="col">
     <div class="card">
-      <img src="kk.jpg" class="card-img-top" alt="...">
+      <img src="kkk.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Network Engineering</h5>
         <p class="card-text">Interested in studying communication networks,
